Enable GC logs